# FairFare

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.sh
FairFare/: core.py  runner.py  settler.py
FairFare/data/test_case_1/: expected_net.json  expected_transactions.json  names.txt  payments.json
FairFare/data/test_case_2/: expected_net.json  expected_transactions.json  names.txt  payments.json
FairFare/strategies/: mapping.py  methods.py
FairFare/tests/: test_core.py  test_settler.py
FairFare/utils/: mappings.py  settle_methods.py  split_methods.py
FairFare/utils/settlement/: mapping.py  methods.py
FairFare/utils/split/: mapping.py  methods.py
FairFare/web/: __init__.py  app.py  routes.py  wsgi.py
FairFare/web/static/: app.js  style.css
FairFare/web/templates/: index.html
SplitExpress/: core.py
SplitExpress/strategies/: mapping.py
SplitExpress/tests/: test_core.py
scripts/: lint.py
